--- a/pricing-cards/index.html
+++ b/pricing-cards/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <!-- Global Container -->
-    <div class="flex items-center justify-center min-h-screen bg-slate-800">
+    <div class="flex items-center justify-center h-screen bg-slate-800">
       <!-- Inner Container -->
       <div
-        class="flex flex-col my-6 space-y-6 md:space-y-0 md:space-x-6 md:flex-row md:my-0"
+        class="flex flex-col my-6 space-y-6 md:space-y-0 md:space-x-1 md:flex-row md:my-0"
       >
         <!-- Col 1 -->
         <div class="bg-slate-700 rounded-xl text-white">
